--- a/template/404.jade
+++ b/template/404.jade
@@ -29,17 +29,18 @@ html
 				display: block;
 			}
 			p {
-				margin-left: 100px;;
+				//-margin-left: 100px;;
 				font-size: 0.8em;
 				margin-top: 1.0em;
+				text-align: center;
 			}
 			a:hover {
 				color: #5ba2ee;
 			}
 			.center {
-				margin: 0 0 0 100px;
+				//-margin: 0 0 0 100px;
 				position: relative;
-				top: 45%;
+				top: 30%;
 				-webkit-transform: translateY(-50%);
 				-moz-transform: translateY(-50%);
 				-ms-transform: translateY(-50%);
@@ -64,15 +65,69 @@ html
 					margin-left: 0;
 				}
 			}
+			
+			//-by jeffrey css3 
+			.demo{width:auto;margin:0 auto auto 0;}
+			.demo div:first-child {
+			  text-align: center;
+			  font-family: sans-serif;
+			  font-size: 500%;
+			  //-font-weight: bold;
+			  //-line-height: 100px;
+			  letter-spacing: 5px;
+			  color: #fff;
+			}
+
+			.demo div:first-child span {
+			  cursor: pointer;
+			  text-shadow: 0px 0px 2px #686868,
+				0px 1px 1px #ddd,
+				0px 2px 1px #d6d6d6,
+				0px 3px 1px #ccc,
+				0px 4px 1px #c5c5c5,
+				0px 5px 1px #c1c1c1,
+				0px 6px 1px #bbb,
+				0px 7px 1px #777,
+				0px 8px 3px rgba(100, 100, 100, 0.4),
+				0px 9px 5px rgba(100, 100, 100, 0.1),
+				0px 10px 7px rgba(100, 100, 100, 0.15),
+				0px 11px 9px rgba(100, 100, 100, 0.2),
+				0px 12px 11px rgba(100, 100, 100, 0.25),
+				0px 13px 15px rgba(100, 100, 100, 0.3);
+			  -webkit-transition: all .1s linear;
+			  transition: all .1s linear;
+			}
+
+			.demo div:first-child span:hover {
+			  text-shadow: 0px 0px 2px #686868,
+				0px 1px 1px #fff,
+				0px 2px 1px #fff,
+				0px 3px 1px #fff,
+				0px 4px 1px #fff,
+				0px 5px 1px #fff,
+				0px 6px 1px #fff,
+				0px 7px 1px #777,
+				0px 8px 3px #fff,
+				0px 9px 5px #fff,
+				0px 10px 7px #fff,
+				0px 11px 9px #fff,
+				0px 12px 11px #fff,
+				0px 13px 15px #fff;
+			  -webkit-transition: all .1s linear;
+			  transition: all .1s linear;
+			  }
 	body
 		.center
 			h1
-				a(href="/") Page Not Found.
+				//by jeffrey
+				div.demo
+					//-a(href="/") 
+					<div><span>4</span><span>0</span><span>4</span></div>
 			p
 				if site.configs.template_inherit==False
-					a(href="#")
+					a(href="/")
 						small &gt;
-						| &nbsp; Maybe you should not set `Inherits from Default Template` to `False`!
+						| &nbsp; 你所寻找的页面已经爆炸。
 				else
 					a(href="http://help.farbox.com/read/how-to-make-a-template", target="_blank")
 						small &gt;
