--- a/template/blog/style.scss
+++ b/template/blog/style.scss
@@ -6,7 +6,7 @@
 // value settings
 $font_color: #191919;
 $bg1: #fff;
-$primary: #58b798;
+$primary: #307099;//BY JEFFREY
 
 
 // related colors
@@ -120,17 +120,20 @@ input, textarea, button {
 //*********************************************************************//
 
 #header {
-    background: #303538 no-repeat center center;
+    background: #307099 no-repeat center center;//model after fangke.im by jeffrey
     background-size: cover;
     height: 260px;
+	//display:table;
+
 
     .header_wrapper {
         padding-top:80px;
+		//padding-bottom:80px;
 
         h1 {
             padding: 0;
             margin: 0;
-            font-size: 2.0em;
+            font-size: 6.0em;//Enlarged by jeffrey
             text-align: center;
             a {
                 letter-spacing: -1px;
@@ -160,9 +163,22 @@ input, textarea, button {
                 a {
                     color: #fff;
                     font-size: 12px;
+					//font-variant:small-caps;
                     margin: 0 1em;
                     text-shadow: 1px 1px #333;
-
+					
+                    &:hover{
+                        border-bottom-color: #fff;
+                    }
+                }
+				 a.navpage {
+				 //by jeffrey
+                    color: yellow;
+                    font-size: 18px;
+					font-variant:small-caps;
+                    margin: 0 1em;
+                    text-shadow: 1px 1px #333;
+					
                     &:hover{
                         border-bottom-color: #fff;
                     }
@@ -170,6 +186,7 @@ input, textarea, button {
             }
 
         }
+		
     }
 
 }
@@ -251,7 +268,7 @@ input, textarea, button {
             margin: 0 0 1.2em;
             background: lighten($line_color, 8%);;
             border-left: 2px solid darken($line_color, 10%);
-            font-size: 0.8em;
+            //font-size: 0.8em;//by jeffrey
             p {
                 margin: 0;
             }
@@ -706,10 +723,20 @@ input, textarea, button {
     }
 }
 
+/*back buttion by jeffrey*/
+.back {
+				position: fixed;
+				right: 15px;
+				bottom: 10px;
+				font-size: 0.7em;
+
+			}
+			.back a {
+				color: #acacac;
 
 
-
-
+}
+				
 /*footer starts*/
 #footer {
     margin: 80px 0 30px 0;
@@ -754,7 +781,9 @@ input, textarea, button {
 #main, #fb_comments_container{
     //padding: 1.875em 0;
     padding: 2.7em 0;
-    margin: 1.5em 4%;
+    margin: 1.5em auto;//by jeffrey. original second is 4%
+	max-width:700px;//by jeffrey
+	
 }
 
 #main{
