--- a/template/base.jade
+++ b/template/base.jade
@@ -55,7 +55,8 @@ html
 			#main
 				block content
 				p.back
-					small back to//by jeffrey back to top
+					//small back to
+					//by jeffrey back to top
 					a(href="#header") &nbsp;TOP
 			#footer
 				.powered_by
