--- a/template/base.jade
+++ b/template/base.jade
@@ -60,9 +60,9 @@ html
 					a(href="#header") &nbsp;TOP
 			#footer
 				.powered_by
-					|© 2013 - 2015<a href="http://yuefeng.li">Yuefeng Li</a>     
+					|© 2013 - 2015<a href="http://yuefeng.li">Yuefeng Li</a>
 					|Powered by<a href="https://www.farbox.com", target="_blank">FarBox</a>
-					|Designed by<a href="http://colachan.com", target="_blank">ColaChan</a>
+					|with<a href="https://github.com/YuefengLi/FarboxDefaultPlus", target="_blank">FarboxDefaultPlus</a>
 					//-a.admin(href="/admin") Admin
 					//-span All Rights reserved.
 
